--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>A Monk in Cloud</title>
+	<title>Greetings</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<header>
-		<h1>Greeting App</h1>
+		<h1>Greetings !!</h1>
         <div class="counter-number">Views</div>
 	</header>
 	<main>
